@@ -69,16 +69,53 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>21</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
+                            </compileSourceRoots>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-java-22</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>22</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java22</compileSourceRoot>
+                            </compileSourceRoots>
+                            <multiReleaseOutput>true</multiReleaseOutput>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.2</version>
                 <configuration>
-                    <parallel>suites</parallel>
-                    <threadCountSuites>1</threadCountSuites>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <systemPropertyVariables>
-                        <java.library.path>${project.build.directory}/classes</java.library.path>
-                    </systemPropertyVariables>
+                    <forkCount>1</forkCount>
+                    <argLine>--enable-native-access=com.nvidia.cuvs</argLine>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -101,7 +138,7 @@
                                     <type>so</type>
                                     <overWrite>false</overWrite>
                                     <outputDirectory>
-                                        ${project.build.directory}/classes</outputDirectory>
+                                        ${project.build.directory}/classes/META-INF/native/linux_x64</outputDirectory>
                                     <destFileName>libcuvs_java.so</destFileName>
                                 </artifactItem>
                             </artifactItems>
@@ -117,6 +154,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <mergeManifestMode>merge</mergeManifestMode>
                     <archiverConfig>
                         <duplicateBehavior>add</duplicateBehavior>
                     </archiverConfig>
@@ -134,14 +172,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.2</version>
+                <version>3.4.2</version>
                 <configuration>
                     <archive>
-                        <manifest>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
                             <addClasspath>true</addClasspath>
                             <mainClass>
                                 com.nvidia.cuvs.examples.CagraExample</mainClass>
-                        </manifest>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
